k8s/general/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeshare-frontend
  namespace: staging
spec:
  selector:
    app: kubeshare-frontend
  ports:
    - name: kubeshare-frontend-http
      port: 80
      targetPort: 80
