k8s/general/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubeshare
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - www.staging.kubeshare.com
  rules:
  - host: www.staging.kubeshare.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeshare-frontend
          servicePort: 80
